--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,8 @@
   force = true
   from = "/*"
   status = 200
-  to = "/.netlify/functions/api/:splat"
+  to = "/.netlify/functions/app/:splat"
 [build]
+  functions = "functions"
+  publish ="public"
   command = "npm run build"
