--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "serverless-http": "^3.2.0"
   }
 }
