--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
 [functions]
-  external_node_modules = ["express", "body-parser", "request", "https"]
+  external_node_modules = ["express", "body-parser", "request", "https", "serverless-http"]
   node_bundler = "esbuild"
 [[redirects]]
   force = true
-  from = "/*"
+  from = "/api/*"
   status = 200
-  to = "/.netlify/functions/app/:splat"
+  to = "/.netlify/functions/api/:splat"
 [build]
   functions = "functions"
   publish ="public"
